fix: component overlap fixed

--- a/friendster-frontend/vite-project/src/assets/stylesheets/_results.scss
+++ b/friendster-frontend/vite-project/src/assets/stylesheets/_results.scss
@@ -1,3 +1,3 @@
-.home {
+.results {
   min-height: 100vh;
 }
